--- a/ios/PetsPlanet/Info.plist
+++ b/ios/PetsPlanet/Info.plist
@@ -55,9 +55,15 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>This app needs to get your location...</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Needs to get photo from library</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need Microphone Permission</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Needs to use camera</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
