--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-get-location": "^2.2.1",
     "react-native-image-crop-picker": "^0.37.3",
+    "react-native-image-slider-box": "^1.1.23",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^2.4.0",
     "react-native-safe-area-context": "^3.3.2",
