--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/datetimepicker": "^6.2.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.25.0",
     "i": "^0.3.7",
+    "moment": "^2.29.4",
     "npm": "^8.4.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
