--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-actionsheet": "^2.4.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-geocoder": "^0.5.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-get-location": "^2.2.1",
