--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.3"
   },
   "devDependencies": {
     "@babel/core": "7.17.0",
