--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -194,6 +194,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
